force-app/main/default/objects/VN_call_manual__c/VN_call_manual__c.object-meta.xml
<CustomObject>
    <label>VN call manual</label>
    <nameField>
        <label>VN_call_manual Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VN call manuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>