force-app/main/default/objects/VN_call_manual__c/fields/brand_to_be_discussed__c.field-meta.xml
<CustomField>
    <fullName>brand_to_be_discussed__c</fullName>
    <label>Brand to be discussed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>