force-app/main/default/objects/VN_call_manual__c/fields/call_completed_date_external__c.field-meta.xml
<CustomField>
    <fullName>call_completed_date_external__c</fullName>
    <label>Call Completed Date (External)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>