force-app/main/default/objects/VN_call_manual__c/fields/call_note__c.field-meta.xml
<CustomField>
    <fullName>call_note__c</fullName>
    <label>Call Note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>