force-app/main/default/objects/VN_call_manual__c/fields/call_outcome__c.field-meta.xml
<CustomField>
    <fullName>call_outcome__c</fullName>
    <label>Call Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>