force-app/main/default/objects/VN_call_manual__c/fields/call_rgrd_contact_brand_switch_reason__c.field-meta.xml
<CustomField>
    <fullName>call_rgrd_contact_brand_switch_reason__c</fullName>
    <label>Call Rgrd Contact Brand Switch Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>