force-app/main/default/objects/VN_call_manual__c/fields/call_rgrd_contact_first_name__c.field-meta.xml
<CustomField>
    <fullName>call_rgrd_contact_first_name__c</fullName>
    <label>Call Rgrd Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>