force-app/main/default/objects/VN_call_manual__c/fields/call_status__c.field-meta.xml
<CustomField>
    <fullName>call_status__c</fullName>
    <label>Call Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>