force-app/main/default/objects/VN_call_manual__c/fields/campaign_name__c.field-meta.xml
<CustomField>
    <fullName>campaign_name__c</fullName>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>