force-app/main/default/objects/VN_call_manual__c/fields/converted_br_curr_brand_name__c.field-meta.xml
<CustomField>
    <fullName>converted_br_curr_brand_name__c</fullName>
    <label>Converted BR Curr Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>