force-app/main/default/objects/VN_call_manual__c/fields/converted_br_prev_brand_id__c.field-meta.xml
<CustomField>
    <fullName>converted_br_prev_brand_id__c</fullName>
    <label>Converted BR Prev Brand ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>