force-app/main/default/objects/VN_call_manual__c/fields/converted_br_status__c.field-meta.xml
<CustomField>
    <fullName>converted_br_status__c</fullName>
    <label>Converted BR Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>