force-app/main/default/objects/VN_call_manual__c/fields/converted_br_type__c.field-meta.xml
<CustomField>
    <fullName>converted_br_type__c</fullName>
    <label>Converted BR Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>