force-app/main/default/objects/VN_call_manual__c/fields/converted_brand_switch_reason__c.field-meta.xml
<CustomField>
    <fullName>converted_brand_switch_reason__c</fullName>
    <label>Converted Brand Switch Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>