force-app/main/default/objects/VN_call_manual__c/fields/Converted_Main_BR_SFID__c.field-meta.xml
<CustomField>
    <fullName>Converted_Main_BR_SFID__c</fullName>
    <label>Converted Main BR SFID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>