force-app/main/default/objects/VN_call_manual__c/fields/create_converted_br__c.field-meta.xml
<CustomField>
    <fullName>create_converted_br__c</fullName>
    <label>Create Converted BR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>