force-app/main/default/objects/VN_call_manual__c/fields/create_medical_diagnosis__c.field-meta.xml
<CustomField>
    <fullName>create_medical_diagnosis__c</fullName>
    <label>Create Medical Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>