force-app/main/default/objects/VN_call_manual__c/fields/create_new_address__c.field-meta.xml
<CustomField>
    <fullName>create_new_address__c</fullName>
    <label>Create New Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>