force-app/main/default/objects/VN_call_manual__c/fields/create_new_adult__c.field-meta.xml
<CustomField>
    <fullName>create_new_adult__c</fullName>
    <label>Create New Adult</label>
    <length>255</length>
    <type>Text</type>
</CustomField>