force-app/main/default/objects/VN_call_manual__c/fields/create_new_child__c.field-meta.xml
<CustomField>
    <fullName>create_new_child__c</fullName>
    <label>Create New Child</label>
    <length>255</length>
    <type>Text</type>
</CustomField>