force-app/main/default/objects/VN_call_manual__c/fields/create_order__c.field-meta.xml
<CustomField>
    <fullName>create_order__c</fullName>
    <label>Create Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>