force-app/main/default/objects/VN_call_manual__c/fields/current_treatment__c.field-meta.xml
<CustomField>
    <fullName>current_treatment__c</fullName>
    <label>Current Treatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>