force-app/main/default/objects/VN_call_manual__c/fields/date_of_diagnosis__c.field-meta.xml
<CustomField>
    <fullName>date_of_diagnosis__c</fullName>
    <label>Date of Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>