force-app/main/default/objects/VN_call_manual__c/fields/existing_main_br_curr_brand_name__c.field-meta.xml
<CustomField>
    <fullName>existing_main_br_curr_brand_name__c</fullName>
    <label>Existing Main BR Curr Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>