force-app/main/default/objects/VN_call_manual__c/fields/existing_main_brand_switch_reason__c.field-meta.xml
<CustomField>
    <fullName>existing_main_brand_switch_reason__c</fullName>
    <label>Existing Main Brand Switch Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>