force-app/main/default/objects/VN_call_manual__c/fields/invalid_reason__c.field-meta.xml
<CustomField>
    <fullName>invalid_reason__c</fullName>
    <label>Invalid Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>