force-app/main/default/objects/VN_call_manual__c/fields/main_address_district__c.field-meta.xml
<CustomField>
    <fullName>main_address_district__c</fullName>
    <label>Main Address District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>