force-app/main/default/objects/VN_call_manual__c/fields/main_address_street_line_2__c.field-meta.xml
<CustomField>
    <fullName>main_address_street_line_2__c</fullName>
    <label>Main Address Street Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>