force-app/main/default/objects/VN_call_manual__c/fields/main_contact_id__c.field-meta.xml
<CustomField>
    <fullName>main_contact_id__c</fullName>
    <label>Main Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>