force-app/main/default/objects/VN_call_manual__c/fields/main_contact_last_name__c.field-meta.xml
<CustomField>
    <fullName>main_contact_last_name__c</fullName>
    <label>Main Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>