force-app/main/default/objects/VN_call_manual__c/fields/main_contact_mobile_phone__c.field-meta.xml
<CustomField>
    <fullName>main_contact_mobile_phone__c</fullName>
    <label>Main Contact Mobile Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>