force-app/main/default/objects/VN_call_manual__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <length>24</length>
    <type>Text</type>
</CustomField>