force-app/main/default/objects/VN_call_manual__c/fields/medical_diagnosis_name__c.field-meta.xml
<CustomField>
    <fullName>medical_diagnosis_name__c</fullName>
    <label>Medical Diagnosis Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>