force-app/main/default/objects/VN_call_manual__c/fields/medical_diagnosis_number__c.field-meta.xml
<CustomField>
    <fullName>medical_diagnosis_number__c</fullName>
    <label>Medical Diagnosis Number</label>
    <length>72</length>
    <type>Text</type>
</CustomField>