force-app/main/default/objects/VN_call_manual__c/fields/new_address_city__c.field-meta.xml
<CustomField>
    <fullName>new_address_city__c</fullName>
    <label>New Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>