force-app/main/default/objects/VN_call_manual__c/fields/new_address_street_line_1__c.field-meta.xml
<CustomField>
    <fullName>new_address_street_line_1__c</fullName>
    <label>New Address Street Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>