force-app/main/default/objects/VN_call_manual__c/fields/new_adult_email__c.field-meta.xml
<CustomField>
    <fullName>new_adult_email__c</fullName>
    <label>New Adult Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>