force-app/main/default/objects/VN_call_manual__c/fields/new_adult_prev_brand_id__c.field-meta.xml
<CustomField>
    <fullName>new_adult_prev_brand_id__c</fullName>
    <label>New Adult Prev Brand ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>