force-app/main/default/objects/VN_call_manual__c/fields/new_child_br_type__c.field-meta.xml
<CustomField>
    <fullName>new_child_br_type__c</fullName>
    <label>New Child BR Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>