force-app/main/default/objects/VN_call_manual__c/fields/new_child_dob__c.field-meta.xml
<CustomField>
    <fullName>new_child_dob__c</fullName>
    <label>New Child DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>