force-app/main/default/objects/VN_call_manual__c/fields/new_child_last_name__c.field-meta.xml
<CustomField>
    <fullName>new_child_last_name__c</fullName>
    <label>New Child Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>