force-app/main/default/objects/VN_call_manual__c/fields/object_extraction_status__c.field-meta.xml
<CustomField>
    <fullName>object_extraction_status__c</fullName>
    <label>object_extraction_status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>