force-app/main/default/objects/VN_call_manual__c/fields/order_description__c.field-meta.xml
<CustomField>
    <fullName>order_description__c</fullName>
    <label>Order Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>