force-app/main/default/objects/VN_call_manual__c/fields/order_payment_method__c.field-meta.xml
<CustomField>
    <fullName>order_payment_method__c</fullName>
    <label>Order Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>