force-app/main/default/objects/VN_call_manual__c/fields/order_product_category_1__c.field-meta.xml
<CustomField>
    <fullName>order_product_category_1__c</fullName>
    <label>Order Product Category 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>