force-app/main/default/objects/VN_call_manual__c/fields/order_product_category_3__c.field-meta.xml
<CustomField>
    <fullName>order_product_category_3__c</fullName>
    <label>Order Product Category 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>