force-app/main/default/objects/VN_call_manual__c/fields/order_product_code_2__c.field-meta.xml
<CustomField>
    <fullName>order_product_code_2__c</fullName>
    <label>Order Product Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>