force-app/main/default/objects/VN_call_manual__c/fields/order_start_date__c.field-meta.xml
<CustomField>
    <fullName>order_start_date__c</fullName>
    <label>Order Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>