force-app/main/default/objects/VN_call_manual__c/fields/order_type__c.field-meta.xml
<CustomField>
    <fullName>order_type__c</fullName>
    <label>Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>