force-app/main/default/objects/VN_call_manual__c/fields/outsource_agent_id__c.field-meta.xml
<CustomField>
    <fullName>outsource_agent_id__c</fullName>
    <label>Outsource Agent Id</label>
    <length>72</length>
    <type>Text</type>
</CustomField>