force-app/main/default/objects/VN_call_manual__c/fields/Outsource_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Outsource_Agent_Name__c</fullName>
    <label>Outsource Agent Name</label>
    <length>72</length>
    <type>Text</type>
</CustomField>