force-app/main/default/objects/VN_call_manual__c/fields/Outsource_Vendor_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Outsource_Vendor_Campaign__c</fullName>
    <label>Outsource Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>