force-app/main/default/objects/VN_call_manual__c/fields/product_discussed_2__c.field-meta.xml
<CustomField>
    <fullName>product_discussed_2__c</fullName>
    <label>Product Discussed 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>