force-app/main/default/objects/VN_call_manual__c/fields/product_discussed__c.field-meta.xml
<CustomField>
    <fullName>product_discussed__c</fullName>
    <label>Product Discussed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>