force-app/main/default/objects/VN_call_manual__c/fields/successful_reason__c.field-meta.xml
<CustomField>
    <fullName>successful_reason__c</fullName>
    <label>Successful Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>