force-app/main/default/objects/VN_call_manual__c/fields/Trail_Audit_Fields_3__c.field-meta.xml
<CustomField>
    <fullName>Trail_Audit_Fields_3__c</fullName>
    <label>Trail Audit Fields 3</label>
    <length>72</length>
    <type>Text</type>
</CustomField>