force-app/main/default/objects/VN_call_manual__c/fields/uncontactable_reason__c.field-meta.xml
<CustomField>
    <fullName>uncontactable_reason__c</fullName>
    <label>Uncontactable Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>