force-app/main/default/objects/VN_call_manual__c/fields/unsuccessful_reason__c.field-meta.xml
<CustomField>
    <fullName>unsuccessful_reason__c</fullName>
    <label>Unsuccessful Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>