force-app/main/default/objects/VN_call_manual__c/validationRules/Call_outcome_allowed_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Call_outcome_allowed_value</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( OR( CONTAINS(&apos;Successful&apos;,  call_outcome__c ),
          CONTAINS(&apos;Unsuccessful&apos;,  call_outcome__c ),
          CONTAINS(&apos;Uncontactable&apos;,  call_outcome__c ),
          CONTAINS(&apos;Invalid&apos;,  call_outcome__c ),
          ISBLANK(call_outcome__c)
) )</errorConditionFormula>
    <errorMessage>Below are the only allowed values for Call outcome.
Successful
Unsuccessful
Uncontactable
Invalid</errorMessage>
</ValidationRule>